Add segmented control filter by status routine

--- a/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
+++ b/WabiSabiTeamProject/Feature/Activity/View/Base.lproj/Main.storyboard
@@ -146,47 +146,30 @@
                                     <constraint firstItem="SH0-6b-1OC" firstAttribute="centerY" secondItem="9dh-dK-NJC" secondAttribute="centerY" id="jbz-Zy-emO"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="6q8-g7-q3H">
-                                <rect key="frame" x="20" y="383" width="374" height="30"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xAt-L3-MtF">
-                                        <rect key="frame" x="0.0" y="0.0" width="118" height="30"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="To-do(2)">
-                                            <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
-                                            <color key="baseBackgroundColor" systemColor="systemIndigoColor"/>
-                                        </buttonConfiguration>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RPK-3Z-Yzb">
-                                        <rect key="frame" x="128" y="0.0" width="118" height="30"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="gray" title="Completed(0)">
-                                            <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
-                                        </buttonConfiguration>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Ia-bt-QbQ">
-                                        <rect key="frame" x="256" y="0.0" width="118" height="30"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="gray" title="Skipped(0)">
-                                            <fontDescription key="titleFontDescription" type="system" pointSize="13"/>
-                                        </buttonConfiguration>
-                                    </button>
-                                </subviews>
+                            <view contentMode="scaleToFill" id="bEX-J1-A2p">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.67119655479999996" alpha="0.54042053219999997" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xTk-Lw-C0G">
+                                <rect key="frame" x="20" y="382" width="374" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Pug-Al-EnP"/>
+                                    <constraint firstAttribute="height" constant="28" id="oo2-Ha-QMG"/>
                                 </constraints>
-                            </stackView>
+                                <segments>
+                                    <segment title="Todo (2)"/>
+                                    <segment title="Completed (0)"/>
+                                    <segment title="Skipped (0)"/>
+                                </segments>
+                                <color key="selectedSegmentTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <action selector="changeTableView:" destination="hWR-xw-Yfy" eventType="valueChanged" id="y6P-Ql-hpg"/>
+                                </connections>
+                            </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="T3c-gO-kzX">
                                 <rect key="frame" x="0.0" y="428" width="414" height="428"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bEX-J1-A2p">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <color key="backgroundColor" white="0.67119655479999996" alpha="0.54042053219999997" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tutorial1" translatesAutoresizingMaskIntoConstraints="NO" id="SG1-Ru-5mt">
                                 <rect key="frame" x="113.66666666666669" y="113" width="187" height="82"/>
                                 <constraints>
@@ -195,7 +178,7 @@
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tutorial2" translatesAutoresizingMaskIntoConstraints="NO" id="Xaq-fh-Vuz">
-                                <rect key="frame" x="93" y="278" width="228" height="90"/>
+                                <rect key="frame" x="93" y="281" width="228" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="228" id="QjN-7z-aE3"/>
                                     <constraint firstAttribute="height" constant="90" id="WHU-zg-OHY"/>
@@ -233,40 +216,35 @@
                         <viewLayoutGuide key="safeArea" id="5hZ-Nm-t8J"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="T3c-gO-kzX" firstAttribute="top" secondItem="bhi-J9-bpM" secondAttribute="bottom" constant="-11" id="1e9-Xm-LVh"/>
                             <constraint firstItem="Spc-yC-GOe" firstAttribute="top" secondItem="bef-mK-pzW" secondAttribute="top" id="2lk-lj-0Y4"/>
+                            <constraint firstItem="T3c-gO-kzX" firstAttribute="top" secondItem="xTk-Lw-C0G" secondAttribute="bottom" constant="18" id="5ys-0r-miI"/>
                             <constraint firstItem="zOf-Zu-CH6" firstAttribute="top" secondItem="SG1-Ru-5mt" secondAttribute="bottom" constant="27.666666666666657" id="8Lo-aC-kR5"/>
                             <constraint firstAttribute="trailing" secondItem="31q-wp-Ubd" secondAttribute="trailing" constant="-86" id="8iz-O8-L6g"/>
                             <constraint firstItem="Spc-yC-GOe" firstAttribute="trailing" secondItem="5hZ-Nm-t8J" secondAttribute="trailing" id="9VZ-g4-YG9"/>
+                            <constraint firstItem="xTk-Lw-C0G" firstAttribute="leading" secondItem="5hZ-Nm-t8J" secondAttribute="leading" constant="20" id="9kA-Yy-I8K"/>
                             <constraint firstItem="9dh-dK-NJC" firstAttribute="top" secondItem="bef-mK-pzW" secondAttribute="topMargin" constant="38" id="AE7-UO-It9"/>
-                            <constraint firstItem="T3c-gO-kzX" firstAttribute="top" secondItem="bhi-J9-bpM" secondAttribute="bottom" constant="-11" id="AcH-pv-9e9"/>
                             <constraint firstItem="5hZ-Nm-t8J" firstAttribute="bottom" secondItem="N7S-0D-Roz" secondAttribute="bottom" constant="6" id="Bd1-JV-6h6"/>
-                            <constraint firstItem="5hZ-Nm-t8J" firstAttribute="trailing" secondItem="6q8-g7-q3H" secondAttribute="trailing" constant="20" id="DSG-Fe-5C1"/>
                             <constraint firstItem="ffm-LO-AvL" firstAttribute="top" secondItem="9dh-dK-NJC" secondAttribute="bottom" constant="40" id="Mx3-rC-hJ3"/>
-                            <constraint firstAttribute="bottom" secondItem="bEX-J1-A2p" secondAttribute="bottom" id="PUp-BO-mUA"/>
                             <constraint firstItem="ffm-LO-AvL" firstAttribute="trailing" secondItem="5hZ-Nm-t8J" secondAttribute="trailing" id="Pay-zs-TyP"/>
                             <constraint firstItem="31q-wp-Ubd" firstAttribute="top" secondItem="bef-mK-pzW" secondAttribute="top" id="Skk-em-Eet"/>
-                            <constraint firstItem="bEX-J1-A2p" firstAttribute="leading" secondItem="5hZ-Nm-t8J" secondAttribute="leading" id="U56-y2-wuj"/>
                             <constraint firstItem="SG1-Ru-5mt" firstAttribute="centerX" secondItem="bef-mK-pzW" secondAttribute="centerX" id="Ua8-1j-bTx"/>
                             <constraint firstItem="T3c-gO-kzX" firstAttribute="trailing" secondItem="5hZ-Nm-t8J" secondAttribute="trailing" id="UfP-Y5-blN"/>
                             <constraint firstItem="Spc-yC-GOe" firstAttribute="leading" secondItem="bef-mK-pzW" secondAttribute="leading" id="X7R-cJ-VCS"/>
                             <constraint firstItem="31q-wp-Ubd" firstAttribute="leading" secondItem="bef-mK-pzW" secondAttribute="leading" constant="-18" id="ZCm-qo-LxD"/>
-                            <constraint firstItem="6q8-g7-q3H" firstAttribute="top" secondItem="9dh-dK-NJC" secondAttribute="bottom" constant="60" id="a9f-5i-94L"/>
-                            <constraint firstItem="6q8-g7-q3H" firstAttribute="top" secondItem="Xaq-fh-Vuz" secondAttribute="bottom" constant="15" id="aWD-yI-8jf"/>
-                            <constraint firstItem="T3c-gO-kzX" firstAttribute="top" secondItem="6q8-g7-q3H" secondAttribute="bottom" constant="15" id="bjG-C9-Blq"/>
-                            <constraint firstItem="6q8-g7-q3H" firstAttribute="leading" secondItem="5hZ-Nm-t8J" secondAttribute="leading" constant="20" id="cdv-Mx-JrU"/>
+                            <constraint firstItem="5hZ-Nm-t8J" firstAttribute="trailing" secondItem="xTk-Lw-C0G" secondAttribute="trailing" constant="20" id="c9J-Ck-Nnl"/>
+                            <constraint firstItem="xTk-Lw-C0G" firstAttribute="top" secondItem="Xaq-fh-Vuz" secondAttribute="bottom" constant="11" id="czv-GT-igL"/>
                             <constraint firstItem="5hZ-Nm-t8J" firstAttribute="trailing" secondItem="N7S-0D-Roz" secondAttribute="trailing" constant="145" id="dHN-Lf-y9Y"/>
                             <constraint firstItem="ffm-LO-AvL" firstAttribute="leading" secondItem="5hZ-Nm-t8J" secondAttribute="leading" id="ff5-BR-okd"/>
-                            <constraint firstItem="T3c-gO-kzX" firstAttribute="bottom" secondItem="ffm-LO-AvL" secondAttribute="bottom" id="hCF-fZ-Ja2"/>
                             <constraint firstItem="5hZ-Nm-t8J" firstAttribute="bottom" secondItem="aXV-5E-cSA" secondAttribute="bottom" constant="6" id="hCb-yb-hGg"/>
                             <constraint firstAttribute="bottom" secondItem="T3c-gO-kzX" secondAttribute="bottom" constant="40" id="hPP-Tl-u5b"/>
-                            <constraint firstItem="bEX-J1-A2p" firstAttribute="top" secondItem="bef-mK-pzW" secondAttribute="top" id="jJs-Qb-uQj"/>
+                            <constraint firstItem="ffm-LO-AvL" firstAttribute="top" secondItem="xTk-Lw-C0G" secondAttribute="bottom" constant="-47" id="jAI-F6-0Nz"/>
                             <constraint firstAttribute="bottom" secondItem="ffm-LO-AvL" secondAttribute="bottom" constant="40" id="kj4-Cf-A2j"/>
                             <constraint firstItem="5hZ-Nm-t8J" firstAttribute="trailing" secondItem="aXV-5E-cSA" secondAttribute="trailing" constant="20" id="lDu-bb-ilX"/>
                             <constraint firstItem="T3c-gO-kzX" firstAttribute="centerX" secondItem="bef-mK-pzW" secondAttribute="centerX" id="lVa-0W-BJI"/>
                             <constraint firstItem="Xaq-fh-Vuz" firstAttribute="centerX" secondItem="bef-mK-pzW" secondAttribute="centerX" id="mLL-d4-Dxp"/>
                             <constraint firstItem="5hZ-Nm-t8J" firstAttribute="trailing" secondItem="W90-gq-45X" secondAttribute="trailing" constant="56" id="maS-be-RLj"/>
                             <constraint firstItem="9dh-dK-NJC" firstAttribute="centerX" secondItem="bef-mK-pzW" secondAttribute="centerX" id="ne1-Bg-QsU"/>
-                            <constraint firstAttribute="trailing" secondItem="bEX-J1-A2p" secondAttribute="trailing" id="p29-Iy-769"/>
                             <constraint firstItem="5hZ-Nm-t8J" firstAttribute="bottom" secondItem="W90-gq-45X" secondAttribute="bottom" constant="6" id="pqL-h8-D72"/>
                             <constraint firstItem="bhi-J9-bpM" firstAttribute="centerX" secondItem="bef-mK-pzW" secondAttribute="centerX" id="q6D-v2-qBX"/>
                             <constraint firstItem="T3c-gO-kzX" firstAttribute="leading" secondItem="5hZ-Nm-t8J" secondAttribute="leading" id="v9J-fV-aJO"/>
@@ -280,10 +258,8 @@
                         <outlet property="backgroundPurple" destination="Spc-yC-GOe" id="tex-gf-BAs"/>
                         <outlet property="backgroundTutorial" destination="bEX-J1-A2p" id="qPQ-Jo-1Kg"/>
                         <outlet property="circularProgress" destination="9dh-dK-NJC" id="bPd-MI-SAn"/>
-                        <outlet property="completedButton" destination="RPK-3Z-Yzb" id="BGo-Dh-C7b"/>
                         <outlet property="routineTableView" destination="T3c-gO-kzX" id="GRn-eH-fc9"/>
-                        <outlet property="skippedButton" destination="9Ia-bt-QbQ" id="G2u-S8-8mU"/>
-                        <outlet property="todoButton" destination="xAt-L3-MtF" id="hny-s7-ASG"/>
+                        <outlet property="statusSegmentedControl" destination="xTk-Lw-C0G" id="tdR-SR-dD0"/>
                         <outlet property="tutorial1" destination="SG1-Ru-5mt" id="gYg-Wz-Pbc"/>
                         <outlet property="tutorial2" destination="Xaq-fh-Vuz" id="yki-Ix-H8J"/>
                         <outlet property="tutorial3" destination="bhi-J9-bpM" id="Mco-cN-SyQ"/>
